--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -10,16 +10,20 @@
                     {{followingControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
-                <a href="#/{{followingControllerModel.userId}}/profile/reviews">Reviews</a>
+                <a href="#/{{followingControllerModel.userId}}/profile/reviews">
+                    <i class="fa fa-comments" aria-hidden="true"></i>Reviews</a>
             </li>
             <li>
-                <a href="#/{{followingControllerModel.userId}}/profile/likes">Likes</a>
+                <a href="#/{{followingControllerModel.userId}}/profile/likes">
+                    <i class="fa fa-thumbs-up" aria-hidden="true"></i>Likes</a>
             </li>
             <li>
-                <a href="#/{{followingControllerModel.userId}}/profile/followers">Followers</a>
+                <a href="#/{{followingControllerModel.userId}}/profile/followers">
+                    <i class="fa fa-users" aria-hidden="true"></i>Followers</a>
             </li>
             <li ng-class="{'active': followingControllerModel.$location.url() == '/{{followingControllerModel.userId}}/profile/following'}">
-                <a href="#/{{followingControllerModel.userId}}/profile/following">Following</a>
+                <a href="#/{{followingControllerModel.userId}}/profile/following">
+                    <i class="fa fa-users" aria-hidden="true"></i>Following</a>
             </li>
         </ul>
     </div>
