--- a/public/project-next/client/views/users/reviews.view.html
+++ b/public/project-next/client/views/users/reviews.view.html
@@ -11,19 +11,19 @@
             </li>
             <li ng-class="{'active': reviewsControllerModel.$location.url() == '/{{reviewsControllerModel.userId}}/profile/reviews'}">
                 <a href="#/{{reviewsControllerModel.userId}}/profile/reviews">
-                    <i class="fa fa-comments" aria-hidden="true"></i>Reviews</a>
+                    <i class="fa fa-comments" aria-hidden="true"></i> Reviews</a>
             </li>
             <li>
                 <a href="#/{{reviewsControllerModel.userId}}/profile/likes">
-                    <i class="fa fa-thumbs-up" aria-hidden="true"></i>Likes</a>
+                    <i class="fa fa-thumbs-up" aria-hidden="true"></i> Likes</a>
             </li>
             <li>
                 <a href="#/{{reviewsControllerModel.userId}}/profile/followers">
-                    <i class="fa fa-users" aria-hidden="true"></i>Followers</a>
+                    <i class="fa fa-users" aria-hidden="true"></i> Followers</a>
             </li>
             <li>
                 <a href="#/{{reviewsControllerModel.userId}}/profile/following">
-                    <i class="fa fa-users" aria-hidden="true"></i>Following</a>
+                    <i class="fa fa-users" aria-hidden="true"></i> Following</a>
             </li>
         </ul>
     </div>
@@ -41,9 +41,12 @@
             </div>
             <div ng-if="reviewsControllerModel.currentUser._id != reviewsControllerModel.profileUser._id">
                 <div class="col-xs-3 img-center col-sm-2 text-center">
-                    <img src="//placehold.it/100" class="avatar img-circle hidden-sm hidden-xs" alt="avatar">
-                    <img src="//placehold.it/80" class="avatar img-circle visible-sm" alt="avatar">
-                    <img src="//placehold.it/70" class="avatar img-circle visible-xs" alt="avatar">
+                    <img ng-src="{{reviewsControllerModel.profileUser.imgUrl}}"
+                         height="100" width="100" class="avatar img-circle hidden-sm hidden-xs" alt="avatar">
+                    <img ng-src="{{reviewsControllerModel.profileUser.imgUrl}}"
+                         height="100" width="100" class="avatar img-circle visible-sm" alt="avatar">
+                    <img ng-src="{{reviewsControllerModel.profileUser.imgUrl}}"
+                         height="100" width="100" class="avatar img-circle visible-xs" alt="avatar">
                 </div>
                 <div class="col-xs-3">
                     <div class="row mar-user-top hidden-xs hidden-sm">
