--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -54,7 +54,7 @@
                         </ng-rating>
                     </div>
 
-                    <div class="col-xs-6">
+                    <div class="col-xs-6 text-center">
                         <h4>Like Us:</h4>
                         <div class="likeit">
                             <div ng-if="detailsControllerModel.currentUser">
@@ -155,13 +155,14 @@
                     <!-- Comment -->
                     <div class="media margin-well" ng-repeat="review in detailsControllerModel.reviews">
                         <a class="pull-left" href="#">
-                            <img class="media-object" src="http://placehold.it/64x64" alt="">
+                            <img class="media-object img-thumbnail"
+                                 ng-src={{review.imgUrl}}
+                                 height="64" width="64"
+                                 alt=" User Image">
                         </a>
                         <div class="media-body">
                             <h4 ng-hide="detailsControllerModel.selectedreview == $index"
                                 class="media-heading">{{review.title}}
-                                <i class="fa fa-check-circle"></i>
-                                <small>Follow</small>
                             </h4>
                             <h4 ng-hide="detailsControllerModel.selectedreview == $index" class="media-heading">
                                 <small>By <a href="#/{{review.userId}}/profile/reviews">{{review.username}}</a> on {{review.updatedOn | date}}</small>
@@ -198,26 +199,27 @@
                                 <div class="col-xs-12">
                                     <div ng-if="detailsControllerModel.selectedreview !== $index &&
                                     detailsControllerModel.currentUser._id == review.userId"
-                                         class="btn-group pull-right">
-                                        <a class="btn btn-default"
-                                           ng-click="detailsControllerModel.editReview($index)"> Edit
-                                            <i title="Edit Review" class="fa fa-pencil-square-o"></i>
+                                         class="btn-group-sm pull-right">
+                                        <a class="btn btn-warning"
+                                           ng-click="detailsControllerModel.editReview($index)">
+                                            <i title="Edit Review" class="fa fa-pencil-square-o"></i> Edit
                                         </a>
-                                        <a class="btn btn-default"
-                                           ng-click="detailsControllerModel.deleteReview($index)">Delete
-                                            <i title="Delete Review" class="fa fa-trash-o"></i>
+                                        <a class="btn btn-danger"
+                                           ng-click="detailsControllerModel.deleteReview($index)">
+                                            <i title="Delete Review" class="fa fa-trash-o"></i> Delete
                                         </a>
                                     </div>
                                     <div ng-if="detailsControllerModel.selectedreview == $index"
-                                         class="btn-group pull-right">
-                                        <a class="btn btn-default"
-                                           ng-click="detailsControllerModel.save(detailsControllerModel.editablereview, $index)">Save
-                                            <i title="Save Review" class="fa fa-floppy-o"></i>
+                                         class="btn-group-sm pull-right">
+                                        <a class="btn btn-success"
+                                           ng-click="detailsControllerModel.save(detailsControllerModel.editablereview, $index)">
+                                            <i title="Save Review" class="fa fa-floppy-o"></i> Save
+
                                         </a>
 
-                                        <a class="btn btn-default"
-                                           ng-click="detailsControllerModel.disableEditor($index)">Cancel
-                                            <i title="Cancel" class="fa fa-times-circle"></i>
+                                        <a class="btn btn-info"
+                                           ng-click="detailsControllerModel.disableEditor($index)">
+                                            <i title="Cancel" class="fa fa-times-circle"></i> Cancel
                                         </a>
                                     </div>
                                 </div>
