--- a/public/project-next/client/views/admin/admin.user.view.html
+++ b/public/project-next/client/views/admin/admin.user.view.html
@@ -1,6 +1,6 @@
  <div class="col-sm-10 col-sm-offset-1 col-md-11 main col-md-offset-1">
             <h1 class="page-header">Admin</h1>
-            <h3 class="page-header">Users</h3>
+            <!--<h3 class="page-header">Users</h3>-->
             <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead>
