updated admin functionality in assignment5

--- a/public/assignment5/client/views/admin/admin.view.html
+++ b/public/assignment5/client/views/admin/admin.view.html
@@ -87,10 +87,10 @@
                                 <!--class="btn btn-sm btn-danger">Delete</button>-->
                         <!--<button ng-click="model.selectUser($index)"-->
                                 <!--class="btn btn-sm btn-info">Select</button>-->
-                        <a href="" ng-click="model.deleteUser($index)">
+                        <a href="" ng-click="model.deleteUser(user)">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </a>
-                        <a href="" ng-click="model.selectUser($index)">
+                        <a href="" ng-click="model.selectUser(user)">
                             <span class="glyphicon glyphicon-cog pull-right" aria-hidden="true"></span>
                         </a>
                     </td>
