--- a/public/project-next/client/views/users/login.view.html
+++ b/public/project-next/client/views/users/login.view.html
@@ -27,7 +27,6 @@
                                    class="form-control"
                                    id="password" placeholder="Password"/>
                         </div>
-                        <a href="#/forgotpassword"><p id="fpswd">(Forgot Password?)</p></a>
                     </div>
                 </div>
                 <div class="form-group">
@@ -43,6 +42,11 @@
                     </div>
                 </div>
             </form>
+            <div ng-if="loginControllerModel.showError"
+                 role="alert"
+                 class="alert alert-danger">
+                <strong>Incorrect username/password!</strong>Try entering correct userid/password.
+            </div>
         </div>
     </div>
 </div>
