--- a/public/project-next/client/views/users/register.view.html
+++ b/public/project-next/client/views/users/register.view.html
@@ -111,6 +111,11 @@
                     </div>
                 </div>
             </form>
+            <div ng-if="registerControllerModel.showError"
+                 role="alert"
+                 class="alert alert-danger">
+                <strong>Username already exists/Few fields are empty!</strong>Please choose different username.
+            </div>
         </div>
     </div>
 </div>
