--- a/public/project-next/client/views/home/home.view.html
+++ b/public/project-next/client/views/home/home.view.html
@@ -38,7 +38,6 @@
             <!--<h4 class="lead">One place for best food reviews on local flavors!</h4>-->
         <!--</div>-->
     </div>
-
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -66,6 +65,11 @@
             </div>
         </div>
     </div>
+</div>
+<div ng-if="homeControllerModel.errorShow"
+     role="alert"
+     class="alert alert-warning">
+    <strong>Ohh..Snap..No Response!</strong>Try changing food/place name.
 </div>
 
 <div class="container">
