Hiding search bar from header for admin user

--- a/public/project-next/client/views/search/searchresult.view.html
+++ b/public/project-next/client/views/search/searchresult.view.html
@@ -41,14 +41,13 @@
                     <!--&lt;!&ndash;</div>&ndash;&gt;-->
                     <!--</div>-->
                     <div class="row mar-left-md">
-                        <small>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</small>
+                        <small>{{rest.categories[0][0]}}</small>
                     </div>
                     <div class="row mar-left-md hideit">
                         <p>{{rest.location.address[0]}}, {{rest.location.city}}</p>
                     </div>
                     <div class="row mar-left-md">
                         <small>{{rest.display_phone}}</small>
-                        >
                     </div>
                 </div>
                 <div class="hidinxs col-xs-3 col-sm-5 fnt-sz">
