--- a/public/project-next/client/views/header/header.view.html
+++ b/public/project-next/client/views/header/header.view.html
@@ -22,7 +22,8 @@
         </div>
         <div ng-hide="headerControllerModel.$location.url() == '/home' ||
                        headerControllerModel.$location.url() == '/admin/user' ||
-                       headerControllerModel.$location.url() == '/searchhome'"
+                       headerControllerModel.$location.url() == '/searchhome' ||
+                       currentUser.role == 'Admin'"
              class="hidden-sm hidden-xs">
             <div class="col-sm-3 col-sm-offset-2">
                 <input ng-model="headerControllerModel.restname_header"
