--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -113,18 +113,25 @@
             </form>
             <div ng-if="registerControllerModel.showError"
                  role="alert"
-                 class="alert alert-danger">
-                <strong>Username already exists/Few fields are empty!</strong>Please choose different username.
-            </div>
-            <div ng-if="registerControllerModel.showError"
-                 role="alert"
-                 class="alert alert-danger">
-                <strong>Username already exists/Few fields are empty!</strong>Please choose different username.
+                 class="alert alert-danger alert-dismissible">
+                <button type="button"
+                        class="close btn-xs"
+                        data-dismiss="alert"
+                        aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <strong>Username already exists/Few fields are empty!</strong> Please choose different username.
             </div>
             <div ng-if="registerControllerModel.showGenralError"
                  role="alert"
-                 class="alert alert-danger">
-                <strong>Ohh...Snap!!</strong>Something went wrong...Try registering again.
+                 class="alert alert-danger alert-dismissible">
+                <button type="button"
+                        class="close btn-xs"
+                        data-dismiss="alert"
+                        aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <strong>Ohh...Snap!!</strong> Something went wrong...Try registering again.
             </div>
         </div>
     </div>
