--- a/public/project/client/views/search/searchdetails.view.html
+++ b/public/project/client/views/search/searchdetails.view.html
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="lead"><i class="fa fa-cutlery" aria-hidden="true"></i>
-                            {{detailsControllerModel.rest.categories[0][0]}} ,
+                            {{detailsControllerModel.rest.categories[0][0]}}
                             {{detailsControllerModel.rest.categories[1][0]}}</p>
 
                         <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{detailsControllerModel.rest.location.display_address[0]}},
